--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,7 @@
         <module>ruoyi-quartz</module>
         <module>ruoyi-generator</module>
         <module>ruoyi-common</module>
+        <module>Test</module>
     </modules>
     <packaging>pom</packaging>
 
