--- a/pom.xml
+++ b/pom.xml
@@ -170,12 +170,12 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
-            <!-- 缺项管理-->
-            <dependency>
-                <groupId>com.ruoyi</groupId>
-                <artifactId>ruoyi-defects</artifactId>
-                <version>${ruoyi.version}</version>
-            </dependency>
+<!--            &lt;!&ndash; 缺项管理&ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>com.ruoyi</groupId>-->
+<!--                <artifactId>ruoyi-defects</artifactId>-->
+<!--                <version>${ruoyi.version}</version>-->
+<!--            </dependency>-->
 
         </dependencies>
     </dependencyManagement>
