缺陷管理模块

--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,7 @@
         <module>ruoyi-common</module>
         <module>itemManage</module>
         <module>test-plan</module>
+        <module>ruoyi-defects</module>
     </modules>
     <packaging>pom</packaging>
 
