采用Redisson添加读读锁和读写锁，修改了数据库少返回endTime的bug和增加时添加创建时间

--- a/itemManage/pom.xml
+++ b/itemManage/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.18.0</version>
+        </dependency>
+        <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
             <version>1.6.2</version>
