缺陷管理模块增加redis缓存并解决缓存穿透、雪崩，添加事务

--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,11 @@
                 <artifactId>test-plan</artifactId>
                 <version>${ruoyi.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-defects</artifactId>
+                <version>3.8.6</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
