最终版项目管理

--- a/itemManage/pom.xml
+++ b/itemManage/pom.xml
@@ -57,6 +57,10 @@
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>test-plan</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
